--- a/resources/css/layouts/aside.scss
+++ b/resources/css/layouts/aside.scss
@@ -9,7 +9,7 @@
   height: 100%;
   padding: 2.4rem;
   margin-right: 1rem;
-  background: #fff5ec;
+  background: $colorWhite;
 
   @media only screen and (max-width: $pointMD) {
     position: fixed;
@@ -51,9 +51,9 @@
     min-height: 2.8rem;
     margin-right: auto;
     padding: 0.6rem 1.8rem 0.6rem 3.2rem;
-    background-color: #25313a;
+    background-color: $colorMainBackground;
     font-size: 1.3rem;
-    color: #fff;
+    color: $colorWhite;
 
     @media only screen and (max-width: $pointMD) {
       background-color: transparent;
@@ -124,8 +124,8 @@
     font-style: normal;
     line-height: 1.3;
     font-weight: 500;
-    color: #7d8797;
-    background-color: #fff;
+    color: $color_5;
+    background-color: $colorWhite;
     border: none;
     cursor: pointer;
     -webkit-user-select: none;
@@ -199,12 +199,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #25313a;
+    background: $colorMainBackground;
     border-radius: 50%;
     font-size: 1.4rem;
     line-height: 1;
     font-weight: 700;
-    color: #ffffff;
+    color: $colorWhite;
   }
 
   &__rating {
