--- a/resources/css/pages/home.scss
+++ b/resources/css/pages/home.scss
@@ -5,14 +5,16 @@
 @import "../layouts/similar.scss";
 
 .filter {
-  position: relative;
-  padding-left: 10rem;
-  max-width: 100%;
-  // display: flex;
-  background-color: #ededed !important;
+  &__container {
+    position: relative;
+    padding-left: 10rem;
+    max-width: 100%;
+    // display: flex;
+    background-color: $colorGreyLight !important;
 
-  @media only screen and (max-width: $pointMD) {
-    padding-left: 0;
+    @media only screen and (max-width: $pointMD) {
+      padding-left: 0;
+    }
   }
 
   &__wrapper {
@@ -49,7 +51,7 @@
       height: calc(100vh - 19rem);
       margin: 0;
       z-index: -1;
-      box-shadow: 0 5px 50px rgba(0, 0, 0, 0.15);
+      box-shadow: 0 5px 50px $shadow;
 
       .map-open & {
         z-index: 1;
@@ -151,7 +153,7 @@
   height: 12rem;
   position: fixed;
   bottom: 0;
-  background-color: #25313a;
+  background-color: $colorMainBackground;
   z-index: 1000;
   display: none;
 
@@ -181,7 +183,7 @@
       min-width: 10rem;
       min-height: 4rem;
       font-size: 1.3rem;
-      color: #ffffff;
+      color: $colorWhite;
 
       svg {
         width: 2rem;
@@ -199,7 +201,7 @@
         height: 20px;
 
         path {
-          stroke: #B4E040;
+          stroke: $colorPrimary;
         }
       }
 
