categories list layout

--- a/resources/css/pages/shop.scss
+++ b/resources/css/pages/shop.scss
@@ -2,6 +2,7 @@
 @import "../components/display-rating.scss";
 @import "../layouts/crousel-section.scss";
 @import "../layouts/hours.scss";
+// @import "../layouts/categories-list.scss";
 @import "../layouts/similar.scss";
 
 .preview__slide {
