--- a/resources/css/layouts/aside.scss
+++ b/resources/css/layouts/aside.scss
@@ -1,3 +1,4 @@
+@import "../layouts/categories-list--form.scss";
 @import "../components/display-rating.scss";
 
 .aside {
@@ -9,7 +10,7 @@
   height: 100%;
   padding: 2.4rem;
   margin-right: 1rem;
-  background: $colorWhite;
+  background: $color_12;
 
   @media only screen and (max-width: $pointMD) {
     position: fixed;
