--- a/resources/css/variables.scss
+++ b/resources/css/variables.scss
@@ -22,6 +22,7 @@ $color_8: #8f8f8f;
 $color_9: #f2f2f2;
 $color_10: #f5423e;
 $color_11: #ff4b4820;
+$color_12: #fff5ec;
 
 $shadow: 0 5px 50px rgba(0, 0, 0, 0.15);
 
