sell section adaptive and relayout

--- a/resources/css/layouts/categories-list-form.scss
+++ b/resources/css/layouts/categories-list-form.scss
@@ -1,6 +1,6 @@
-@import "./brands-list--form.scss";
+@import "./brands-list-form.scss";
 
-.categories-list {
+.categories-list-form {
   padding: 2rem 1rem;
   display: flex;
   flex-direction: column;
@@ -77,4 +77,5 @@
     }
   }
 }
+
 
