--- a/resources/css/layouts/similar.scss
+++ b/resources/css/layouts/similar.scss
@@ -38,7 +38,7 @@
     }
   }
 
-  &__more-btn {
+  &__more {
     min-height: 2rem;
     font-size: 1.4rem;
     line-height: 1;
@@ -50,7 +50,7 @@
     }
   }
 
-  &__more-btn::before {
+  &__more::before {
     content: "";
     position: absolute;
     width: 2rem;
@@ -64,7 +64,7 @@
     transition: all 0.5s;
   }
 
-  &__more-btn.active::before {
+  &__more.active::before {
     transform: translateY(-50%) rotate(-180deg);
   }
 }
