--- a/resources/css/pages/shop.scss
+++ b/resources/css/pages/shop.scss
@@ -1,10 +1,13 @@
 @import "../variables.scss";
+@import "../mixins.scss";
 @import "../components/display-rating.scss";
 @import "../components/accordion.scss";
 @import "../layouts/crousel-section.scss";
 @import "../layouts/hours.scss";
 @import "../layouts/brands-list.scss";
 @import "../layouts/similar.scss";
+@import "../layouts/tabs.scss";
+@import "../layouts/comments-list.scss";
 
 .preview__slide {
   max-height: 25.5rem;
@@ -105,7 +108,7 @@
     }
   }
 
-  &-left {
+  &__left {
     padding-right: 10rem;
 
       @media only screen and (max-width: $pointMD) {
@@ -113,8 +116,8 @@
       }
     }
 
-    &-right {
-      &__wrapper {
+    &__right {
+      &-wrapper {
         padding-left: 5rem;
         padding-right: 7.5rem;
         border-left: 1px solid $colorGrey;
@@ -583,6 +586,84 @@
   &__item--sell {
     cursor: pointer;
   }
+}
+
+.testimonials {
+  position: relative;
+  padding-top: 6rem;
+  padding-bottom: 5.5rem;
+  background-color: $colorWhite;
+
+  &__content {
+    display: flex;
+  }
+
+  &__left,
+  &__panels {
+    flex-basis: 50%;
+  }
+
+  &__heading {
+    margin-bottom: 3.4rem;
+    display: flex;
+    align-items: center;
+  }
+
+  &__title {
+    margin-right: 2rem;
+    font-size: 3.7rem;
+    font-weight: 600;
+  }
+
+  &__average {
+    margin-bottom: 0;
+  }
+
+  &__count {
+    margin-right: 1rem;
+    font-size: 3.6rem;
+    line-height: 1.4rem;
+    font-weight: 600;
+  }
+
+  &__description {
+    margin-bottom: 7rem;
+    padding-right: 2rem;
+    font-size: 2rem;
+    line-height: 3.1rem;
+    font-weight: 400;
+  }
+
+  &__checkbox {
+    @include hidden;
+  }
+
+  &__label {
+    position: relative;
+    width: 100%;
+    padding: 2.8rem 4rem 2.8rem 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+    font-weight: 600;
+    opacity: 0.5;
+  }
+
+  &__checkbox:checked + &__label {
+    opacity: 1;
+  }
+
+  &__number {
+    min-height: 2.8rem;
+    padding: 0.7rem 1.5rem;
+    font-size: 1.6rem;
+    font-weight: 700;
+    border-radius: 0.7rem;
+    background-color: $colorPrimary;
+  }
+
+
 }
 
 
