--- a/resources/css/layouts/shop-card.scss
+++ b/resources/css/layouts/shop-card.scss
@@ -17,23 +17,23 @@
     border-width: 1px;
   }
 
-  &.active::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    height: 100%;
-    width: 10px;
-    background-color: $colorSecondary;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-  }
+  // &.active::after {
+  //   content: '';
+  //   position: absolute;
+  //   top: 0;
+  //   right: 0;
+  //   height: 100%;
+  //   width: 10px;
+  //   background-color: $colorSecondary;
+  //   border-top-left-radius: 10px;
+  //   border-bottom-left-radius: 10px;
+  // }
 
   &:not(:first-of-type) {
     margin-top: 1rem;
   }
 
-  &.show {
+  &.active {
     border-color: $colorSecondary;
   }
 
