--- a/resources/css/pages/shop.scss
+++ b/resources/css/pages/shop.scss
@@ -210,17 +210,6 @@
 .info-rating {
   margin-bottom: 2.6rem;
 
-  > .display-rating {
-    margin-bottom: 1rem;
-    display: flex;
-    align-items: center;
-    font-size: 1.7rem;
-
-    &__count {
-      margin-right: 2rem;
-    }
-  }
-
   &__table {
     width: 100%;
 
@@ -247,8 +236,21 @@
   &__count {
     margin-right: 0.5rem;
   }
+}
 
-  &__stars {
+.display-rating {
+  &--info-average {
+    margin-bottom: 1rem;
+    display: flex;
+    align-items: center;
+    font-size: 1.7rem;
+  }
+
+  &__count--info-average {
+    margin-right: 2rem;
+  }
+
+  &--info-services {
     display: flex;
     font-size: 0.8rem;
 
@@ -554,15 +556,17 @@
 
   &__content {
     display: flex;
+    justify-content: space-between;
 
     @media only screen and (max-width: $pointMD) {
       flex-direction: column;
+      justify-content: unset;
     }
   }
 
   &__left,
   &__panels {
-    flex-basis: 50%;
+    flex-basis: 45%;
   }
 
   &__panels {
@@ -595,21 +599,6 @@
     }
   }
 
-  &__average {
-    margin-bottom: 0;
-
-    @media only screen and (max-width: $pointMD) {
-      display: none;
-    }
-  }
-
-  &__count {
-    margin-right: 1rem;
-    font-size: 3.6rem;
-    line-height: 1.4rem;
-    font-weight: 600;
-  }
-
   &__description {
     margin-bottom: 7rem;
     padding-right: 2rem;
@@ -635,13 +624,17 @@
   &__label {
     position: relative;
     width: 100%;
-    padding: 2.8rem 4rem 2.8rem 0;
+    padding: 2.8rem 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
     cursor: pointer;
     font-weight: 600;
     opacity: 0.5;
+
+    &:not(:last-child) {
+      border-bottom: 1px solid $colorGrey;
+    }
   }
 
   &__checkbox:checked + &__label {
@@ -650,8 +643,8 @@
 
   &__number {
     min-height: 2.8rem;
-    padding: 0.7rem 1.5rem;
-    font-size: 1.6rem;
+    padding: 0.5rem 1.2rem;
+    font-size: 1.4rem;
     font-weight: 700;
     border-radius: 0.7rem;
     background-color: $colorPrimary;
@@ -666,6 +659,31 @@
   &__info {
     display: flex;
     justify-content: space-between;
+  }
+}
+
+.display-rating {
+  &--testimonials-average {
+    margin-bottom: 0;
+
+    @media only screen and (max-width: $pointMD) {
+      display: none;
+    }
+  }
+
+  &__count--testimonials-average {
+    margin-right: 1rem;
+    font-size: 3.6rem;
+    font-weight: 600;
+  }
+
+  &--testimonials-service {
+    font-size: 0.9rem;
+  }
+
+  &__count--testimonials-service {
+    margin-right: 1rem;
+    font-weight: 700;
   }
 }
 
