--- a/resources/css/layouts/similar-categories-and-location.scss
+++ b/resources/css/layouts/similar-categories-and-location.scss
@@ -1,7 +1,7 @@
 @import './similar-categories.scss';
 @import './similar-location.scss';
 
-.similar {
+.similar-categories-and-location {
   padding: 6rem 0;
   background: $colorPrimary;
   background-image: url("/public/assets/img/categories-bg.webp");
@@ -29,7 +29,7 @@
     }
   }
 
-  &__inner {
+  &__content {
     display: flex;
     justify-content: space-between;
 
@@ -38,35 +38,6 @@
     }
   }
 
-  &__more {
-    min-height: 2rem;
-    font-size: 1.4rem;
-    line-height: 1;
-    font-weight: 600;
-    padding-left: 3rem;
-
-    @media only screen and (max-width: $pointMD) {
-      margin-bottom: 4rem;
-    }
-  }
-
-  &__more::before {
-    content: "";
-    position: absolute;
-    width: 2rem;
-    height: 2rem;
-    background-image: url("/resources/assets/svg/arrow-square-down.svg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    top: 50%;
-    transform: translateY(-50%);
-    left: 0;
-    transition: all 0.5s;
-  }
-
-  &__more.active::before {
-    transform: translateY(-50%) rotate(-180deg);
-  }
 }
 
 
