--- a/resources/css/pages/home.scss
+++ b/resources/css/pages/home.scss
@@ -2,7 +2,7 @@
 @import "../layouts/hero.scss";
 @import "../layouts/aside.scss";
 @import "../layouts/shop-list.scss";
-@import "../layouts/similar.scss";
+@import "../layouts/similar-categories-and-location.scss";
 
 .filter {
   &__container {
